--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,65 @@
-html,
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+:root {
+    --background: #282A36;
+    --foreground: #F8F8F2;
+    --selection: #44475A;
+    --comment: #6272A4;
+    --red: #FF5555;
+    --orange: #FFB86C;
+    --yellow: #F1FA8C;
+    --green: #50FA7B;
+    --purple: #BD93F9;
+    --cyan: #8BE9FD;
+    --pink: #FF79C6;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+}
+
+h2 {
+    color: var(--comment);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: var(--cyan);
+    text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+a:visited {
+    color: var(--purple);
+}
+
+a:hover {
+    color: var(--pink);
+}
+
+
+/* Buttons */
+
+.btn {
+    display: inline-block;
+    list-style-type: none;
+    border: 2px solid var(--purple);
+    background-color: var(--purple);
+    color: var(--foreground);
+    border-radius: 7px;
+    margin: 0.2rem;
+    margin-bottom: 0.4rem;
+    padding: 0.3rem 0.4rem;
+    font-weight: bold;
+    width: 80px;
+    text-align: center;
+}
+
+.btn:hover {
+    cursor: pointer;
+    background-color: var(--orange);
+    border: 2px solid var(--orange);
+}
+
+.btn-outline, .btn-outline:hover {
+    background-color: transparent;
 }
