Pre refactor commit

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,32 +47,15 @@ a:hover {
     color: var(--pink);
 }
 
-
-/* Buttons */
-
-.btn {
-    display: inline-block;
-    list-style-type: none;
-    border: 2px solid var(--purple);
-    background-color: var(--purple);
-    color: var(--foreground);
-    border-radius: 7px;
-    margin: 0.2rem;
-    margin-bottom: 0.4rem;
-    padding: 0.3rem 0.4rem;
-    font-weight: bold;
-    width: 80px;
-    text-align: center;
+input {
+    background: var(--background);
+    color: var(--green);
+    font-size: x-large;
+    outline: none;
 }
 
-.btn:hover {
-    cursor: pointer;
-    background-color: var(--orange);
-    border: 2px solid var(--orange);
-}
-
-.btn-outline, .btn-outline:hover {
-    background-color: transparent;
+input:focus {
+    border-bottom: 1px solid var(--green);
 }
 
 .icon {
