Add react-autosuggest with some of the basic functionality.
Added a more data to the database. Need to figure out a better query for
joining more than 2 collections. Probably better to make a view for what
is needed.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,14 +47,14 @@ a:hover {
     color: var(--pink);
 }
 
-input {
+.filternameInput {
     background: var(--background);
     color: var(--green);
     font-size: x-large;
     outline: none;
 }
 
-input:focus {
+.filternameInput:focus {
     border-bottom: 1px solid var(--green);
 }
 
