Add fuse.js for a better fuzzy-search in the suggestions.
Moved suggestion items to its own component, add more fields to the
suggestion items and som rough styling.
Changed all components who had a width of 100vw to also have a max
width, to hinder the vertical scrollbar to interfere with styles.

--- a/styles/components/AutoSuggestInput.module.css
+++ b/styles/components/AutoSuggestInput.module.css
@@ -1,12 +1,18 @@
 .container {
-  border: 2px red solid;
-  width: 100%
-}
-.containerOpen {}
-.input {
-  color: var(--background);
   width: 100%;
-  background: var(--foreground);
+  border: 2px solid transparent;
+  box-shadow: 0 3px 5px var(--shadow);
+}
+.containerOpen {
+  border: 2px solid transparent;
+  border-bottom: 2px var(--green) solid;
+  
+}
+.input {
+  color: var(--foreground);
+  width: 100%;
+  background: var(--unselected-item-bg);
+  border-bottom: 2px var(--green) solid;
 }
 .inputOpen {}
 .inputFocused {}
