--- a/styles/components/AutoSuggestInput.module.css
+++ b/styles/components/AutoSuggestInput.module.css
@@ -13,16 +13,25 @@
   width: 100%;
   background: var(--unselected-item-bg);
   border-bottom: 2px var(--green) solid;
+  padding-left: 0.25rem;
 }
 .inputOpen {}
 .inputFocused {}
 .suggestionsContainer {}
 .suggestionsContainerOpen {}
-.suggestionsList {}
-.suggestion {}
-.suggestionFirst {}
+.suggestionsList{
+}
+.suggestion:nth-child(odd) {
+  background: var(--background-dark);
+}
 .suggestionHighlighted {
-  background: var(--pink);
+  background: var(--selection);
+}
+.suggestionHighlighted:nth-child(odd) {
+  background: var(--selection);
+}
+.suggestionFirst { 
+  font-size: bold;
 }
 .sectionContainer {}
 .sectionContainerFirst {}
