--- a/styles/components/ListItem.module.css
+++ b/styles/components/ListItem.module.css
@@ -41,14 +41,23 @@
   width: 95%;
   cursor: pointer;
   height: 2rem;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   box-shadow: 0 3px 5px var(--shadow);
 }
 
+.exceptionItem p {
+  font-weight: bold;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .exceptionItem:hover {
-  color: var(--green);
-  fill: var(--green);
-  border: 1px solid var(--green);
+  border-bottom: 2px solid var(--green);
   cursor: pointer;
 }
 
@@ -68,4 +77,57 @@
   background: var(--normal-item-bg);
   color: var(--background);
   fill: var(--background);
+}
+
+.crossmark {
+    position: relative;
+    height: 1.25rem; 
+    width: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 0.6s ease;
+}
+
+.crossmark::before,
+.crossmark::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 6px; /* cross thickness */
+    background-color: var(--red);
+}
+
+.crossmark::before {
+    transform: rotate(45deg);
+}
+
+.crossmark::after {
+    transform: rotate(-45deg);
+}
+
+.crossmark:hover {
+  cursor: pointer;
+  transform: scale(1.4) rotateY(180deg);
+}
+
+.ilvlInput {
+    background: inherit;
+    color: var(--background);
+    font-size: small;
+    outline: none;
+    width: 1.75rem;
+    margin-right: 0.5rem;
+    border: 2px solid transparent;
+}
+
+.ilvlLabel {
+  color: var(--background);
+  font-size: small;
+  border: 2px solid transparent;
+} 
+
+.ilvlInput:hover,
+.ilvlInput:focus {
+    border-bottom: 2px solid var(--background);
 }
