--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,18 +48,38 @@ a:hover {
     color: var(--pink);
 }
 
-.filternameInput {
+.label {
+    font-weight: bold;
+    color: var(--comment);
+}
+
+.input {
+    font-weight: bold;
     background: var(--background);
     color: var(--green);
-    font-size: x-large;
     outline: none;
 }
 
-.filternameInput:focus {
+.nameInput {
+    font-size: x-large;
+}
+
+.input:focus {
     border-bottom: 1px solid var(--green);
 }
 
 .icon {
     width: 35px;
     height: 35px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
