Add API functionality to all actions in armoursection.
Remove ExceptionList component as it served no purpose.
Add remaining planned functionality for hybrids and atlas bases.

--- a/styles/components/ToggleButton.module.css
+++ b/styles/components/ToggleButton.module.css
@@ -37,6 +37,7 @@
 }
 
 .buttonBaseSelected { 
+  color: var(--green);
   fill: var(--green);
   border: 1px solid var(--unselected-item-bg);
   background: var(--unselected-item-bg);
