Add rudimentary tab component.
To use less screen space and separate different types of weapons or other item types. It should be extended to track wether a tab actually contains any selected items or not, and describe that state through the heading-buttons.

--- a/styles/components/ToggleButton.module.css
+++ b/styles/components/ToggleButton.module.css
@@ -43,3 +43,11 @@
   background: var(--unselected-item-bg);
   background: linear-gradient(180deg, var(--unselected-item-bg) 97%, var(--green) 97% 100%);
 }
+
+.buttonTabSelected { 
+  color: var(--orange);
+  fill: var(--orange);
+  border: 1px solid var(--unselected-item-bg);
+  background: var(--unselected-item-bg);
+  background: linear-gradient(180deg, var(--unselected-item-bg) 97%, var(--orange) 97% 100%);
+}
